--- a/app/src/main/res/layout/activity_image_detail.xml
+++ b/app/src/main/res/layout/activity_image_detail.xml
@@ -10,6 +10,7 @@
         android:id="@+id/detailImage"
         android:layout_width="250dp"
         android:layout_height="250dp"
+        android:onClick="doubleClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
