--- a/app/src/main/res/layout/activity_image_detail.xml
+++ b/app/src/main/res/layout/activity_image_detail.xml
@@ -33,6 +33,7 @@
         android:text="info detail"
         android:layout_margin="24dp"
         android:textAlignment="center"
+        android:onClick="viewImg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailImage"
         app:layout_constraintStart_toStartOf="parent"
