--- a/app/src/main/res/layout/activity_new_image.xml
+++ b/app/src/main/res/layout/activity_new_image.xml
@@ -6,4 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".NewImage">
 
+    <ImageView
+        android:id="@+id/newImage"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnFile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <Button
+        android:id="@+id/btnFile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Subir Foto"
+        android:backgroundTint="@color/purple_200"
+        app:layout_constraintBottom_toTopOf="@+id/txtArea"
+        app:layout_constraintTop_toBottomOf="@+id/newImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <EditText
+        android:id="@+id/txtArea"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:hint="Descripcion"
+        app:layout_constraintBottom_toTopOf="@+id/btnNewImage"
+        app:layout_constraintTop_toBottomOf="@+id/btnFile"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="top"
+        android:inputType="textMultiLine"
+        />
+
+    <Button
+        android:id="@+id/btnNewImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Crear nueva imagen"
+        android:backgroundTint="@color/purple_200"
+        app:layout_constraintTop_toBottomOf="@+id/txtArea"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
